Common plots for DS - adding examples.

--- a/Data_Visualizations_in_Python_with_Code.ipynb
+++ b/Data_Visualizations_in_Python_with_Code.ipynb
@@ -35,6 +35,8 @@
         "\n",
         "There are your 5 quick and easy data visualizations using Matplotlib. Abstracting things into functions always makes your code easier to read and use.\n",
         "\n",
+        "![map of plots](https://cdn-images-1.medium.com/max/800/1*JxbqIQmD_E3M3I7Tjo0OqA.jpeg)\n",
+        "\n",
         "SOURCE: https://towardsdatascience.com/5-quick-and-easy-data-visualizations-in-python-with-code-a2284bae952f"
       ]
     },
@@ -287,6 +289,31 @@
         "    ax.set_ylabel(y_label)\n",
         "    ax.set_xlabel(x_label)\n",
         "    ax.set_title(title)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "DLH3l7zG4vFz",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Examples"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "pdJV1Sof4vqT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "df = pd.read_csv('https://query.data.world/s/l7rag2hbnyhmvh5my7rnajpfm6ccvo')\n",
+        "head(df)\n"
       ],
       "execution_count": 0,
       "outputs": []
