Adjusted missing imports.

--- a/Evaluation_Metrics_for_Classification.ipynb
+++ b/Evaluation_Metrics_for_Classification.ipynb
@@ -64,7 +64,10 @@
         "from sklearn.svm import LinearSVC\n",
         "from sklearn.calibration import calibration_curve\n",
         "from scipy.stats import itemfreq\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense, Dropout\n",
         "\n",
+        "np.random.seed(666)\n",
         "np.random.seed(666)\n",
         "\n",
         "# Total sample size ------------------------------------------------------------\n",
