Added other references.

--- a/RBF_Network_in_Tensorflow.ipynb
+++ b/RBF_Network_in_Tensorflow.ipynb
@@ -15,16 +15,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/isix/Machine-Learning/blob/master/RBF_Network_in_Tensorflow.ipynb)"
-      ]
-    },
-    {
       "metadata": {
         "id": "rgdngnTlNmw1",
         "colab_type": "text"
@@ -35,7 +25,10 @@
         "\n",
         "Radial Basis Function Neural Network using Tensorflow.\n",
         "\n",
-        "Reference - https://stackoverflow.com/questions/45853863/problems-with-my-rbf-network-in-tensorflow\n",
+        "## Reference\n",
+        "* https://stackoverflow.com/questions/45853863/problems-with-my-rbf-network-in-tensorflow\n",
+        "* https://github.com/oarriaga/RBF-Network\n",
+        "* https://github.com/cdusold/TensorFlowRBF\n",
         "\n",
         "![alt text](https://www.researchgate.net/profile/Prakash_V_R/publication/264972112/figure/fig1/AS:295911268864003@1447562152256/Structure-of-Radial-Basis-Function-Neural-Network-There-are-many-basis-functions-such-as.png)"
       ]
@@ -178,7 +171,7 @@
         "\n",
         "sess.close()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,7 +771,7 @@
         "print (\"Final error = {}\".format(err) )\n",
         "sess.close()\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
